crates/apollo-compiler/test_data/diagnostics/0097_enum_extensions.txt
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0097_enum_extensions.graphql:13:15]
    │
  8 │ extend enum E @nonRepeatable {
    │               ───────┬──────  
    │                      ╰──────── directive `@nonRepeatable` first called here
    │ 
 13 │ extend enum E @nonRepeatable {
    │               ───────┬──────  
    │                      ╰──────── directive `@nonRepeatable` called again here
────╯
Error: duplicate definitions for the `MEMBER_2` value of enum type `E`
    ╭─[0097_enum_extensions.graphql:14:3]
    │
  5 │   MEMBER_2
    │   ────┬───  
    │       ╰───── previous definition of `MEMBER_2` here
    │ 
 14 │   MEMBER_2
    │   ────┬───  
    │       ╰───── `MEMBER_2` redefined here
────╯
Error: duplicate definitions for the `MEMBER_4` value of enum type `E`
    ╭─[0097_enum_extensions.graphql:15:3]
    │
 10 │   MEMBER_4
    │   ────┬───  
    │       ╰───── previous definition of `MEMBER_4` here
    │ 
 15 │   MEMBER_4
    │   ────┬───  
    │       ╰───── `MEMBER_4` redefined here
────╯

